--- a/app/views/metrics/_form.html.erb
+++ b/app/views/metrics/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [parent,@metric], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.association :metric_type, include_blank: false %>
   <%= f.input :name %>
+  <%= f.input :note %>
   <%= f.input :decimal_places %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
