--- a/app/views/recorded_metrics/_form.html.erb
+++ b/app/views/recorded_metrics/_form.html.erb
@@ -9,9 +9,10 @@
 <% end %>
 
 <%= simple_form_for [parent,resource], :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.association :metric %>
+  <%= f.association :metric, include_blank: false %>
   <%= f.input :value %>
-  <%= f.input :recorded_on, order: [:month, :day, :year] %>
+  <%#= f.input :recorded_on, order: [:month, :day, :year] %>
+  <%= f.input :recorded_on, as: :string, input_html: {class: 'datepicker', value: Date.today.strftime('%m/%d/%Y')} %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")), user_path(parent), :class => 'btn' %>
