--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
   <%= f.input :active %>
   <%= f.input :language, collection: Locale.all.map{ |locale| [locale.name,locale.code] }, include_blank: false %>
   
-  <%= f.input :assigned_roles, collection: ['admin','athlete'], input_html: {include_blank: true, multiple: true} %>
+  <%= f.input :assigned_roles, label: "Roles", as: :check_boxes, collection: ['admin','athlete'], input_html: {include_blank: true, multiple: true} %>
   <%= f.input :change_roles, as: :hidden, input_html: {value: 1} %>
   <%= f.association :groups, as: :check_boxes, label_method: :full_name, collection: Group.accessible_by(current_ability) %>
   
