--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,3 +31,17 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+.input-append input[type='text'], .input-append select, .input-append .uneditable-input {
+-webkit-border-radius: 4px 0 0 4px !important;
+-moz-border-radius: 4px 0 0 4px !important;
+border-radius: 4px 0 0 4px !important;
+}
+
+.input-append input[type='submit'] {
+  margin-left: -5px;
+}
+
+.scroll-pane {
+  overflow: scroll;
+}
