--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="<%= path_to_image('icons/iphone-retina.png') %>" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="<%= path_to_image('icons/ipad.png') %>" />
     <link rel="apple-touch-icon-precomposed" href="<%= path_to_image('icons/iphone.png') %>" />
-    <link rel="shortcut icon" href="<%= path_to_image('icons/iphone.png') %>" />
+    <!-- <link rel="shortcut icon" href="<%= path_to_image('icons/iphone.png') %>" /> -->
+    
+    <link rel="shortcut icon" href="/favicon.ico" />
     
     <title><%= content_for?(:title) ? yield(:title) : "Performance Unlimited" %></title>
     
