--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -11,13 +11,14 @@
   </div>  
   
   <div class="span6 btn-group">
-    <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_division_path(@division), :class => 'btn btn-large' if can? :update, @division %>
-    <%= link_to t('create_new_group'), new_division_group_path(@division), :class => 'btn btn-primary btn-large'  if can? :create, Group %>
+    <%= link_to t('metrics'), [:dashboard, @division], :class => 'btn ' if can? :update, @division %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_division_path(@division), :class => 'btn ' if can? :update, @division %>
+    <%= link_to t('create_new_group'), new_division_group_path(@division), :class => 'btn btn-primary '  if can? :create, Group %>
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                 division_path(@division),
                 :method => 'delete',
                 :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                :class => 'btn btn-danger btn-large' if can? :destroy, @division %>
+                :class => 'btn btn-danger ' if can? :destroy, @division %>
   </div>
 <% end %>
 
