--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,13 +13,16 @@
   </div>  
   
   <div class="span6 btn-group">
-    <%= link_to t('download'), user_path(@user,format:'csv'), class: 'btn btn-primary btn-large' %>
+    <%= link_to t('download'), user_path(@user,format:'csv'), class: 'btn btn-primary ' %>
      <% if can?(:update, @user) %>
-       <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_user_path(@user), :class => 'btn btn-large' %>
+       <%= link_to t('.edit', :default => t("helpers.links.edit")), edit_user_path(@user), :class => 'btn ' %>
      <% end %>
      <% if can?(:create, RecordedMetric) %>
-        <%= link_to t('record_metric'), new_user_recorded_metric_path(resource), :class => 'btn btn-info btn-large' %>
+        <%= link_to t('record_metric'), new_user_recorded_metric_path(resource), :class => 'btn btn-info ' %>
      <% end %>
+     <% if can?(:update, @user) %>
+      <%= link_to t('metrics'), [:dashboard,@user], :class => 'btn ' %>
+    <% end %>
   </div>
 <% end %>
 
